--- a/assets/vitisTelemetry.css
+++ b/assets/vitisTelemetry.css
@@ -52,7 +52,7 @@
     }
 }
 
-/* For devices larger than 550px */
+/* Switch to centered when 1 gauge per row */
 @media (min-width: 550px) {
   .container {
     width: 80%; }
@@ -74,6 +74,12 @@
   height: 350px;
   margin: 0;
   padding: 25px;
+}
+
+/* History Style
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.history-container {
+  width: 90%;
 }
 
 /* Below 400 px, the whole width of the screen is taken by the container */
