Update style for footer

--- a/src/frontend/assets/vitisTelemetry.css
+++ b/src/frontend/assets/vitisTelemetry.css
@@ -140,6 +140,7 @@ blockquote {
 /* Footer
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .footer {
+  margin-top: 2rem;
   text-align: center;
 }
 
