Added controls to dashboard for start/stop, refresh period, and history

--- a/src/frontend/assets/vitisTelemetry.css
+++ b/src/frontend/assets/vitisTelemetry.css
@@ -106,6 +106,20 @@
   flex-basis: 300px;
 }
 
+/* Controls Style
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.control-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: left;
+}
+
+.control-content{
+  flex: initial;
+  margin: 25px;
+}
+
 /* History Style
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .history-container {
